# prbr-rds-client

./: .gitignore  README.md  pyproject.toml
src/prbr25_rds_client/: postgres.py
