[project]
name = "prbr-rds-client"
version = "0.1.0"
description = ""
authors = [
    {name = "Gabriel Medeiros",email = "gabrielspmedeiros@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas (>=2.3.3,<3.0.0)",
    "sqlalchemy (>=2.0.44,<3.0.0)"
]
[tool.poetry]
packages = [{ include = "prbr25-rds-client", from = "src" }]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
